--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ os:
   - freebsd
 
 julia:
-  - 1.3
+  - 1.0
   - 1
   - nightly
 
@@ -83,6 +83,6 @@ jobs:
       after_success: skip
 
 after_success:
-  - julia -e 'if Sys.islinux() && string(VERSION)[1:3] == "1.4"
+  - julia -e 'if Sys.islinux()
       using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())
     end'
